test/TestSuite/Syntax/Errors/operand_unkn_scen.tjp
project test "Test" "1.0" 2007-08-19 +2m {
  timezone "Europe/Amsterdam"
}

task t "T" {
  start 2007-08-19
}

export "report.tji" {
# MARK: error 11 operand_unkn_scen
	hidetask foo.t
}

